Refactoring code for clarity